force-app/main/default/objects/Appointment_Attendees__c/Appointment_Attendees__c.object-meta.xml
<CustomObject>
    <label>Appointment Attendees</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Appointment Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>