force-app/main/default/objects/Appointment_Attendees__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointment Attendees</relationshipLabel>
    <relationshipName>Appointment_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>