force-app/main/default/objects/Appointment_Attendees__c/fields/Appointment_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Scheduling</label>
    <referenceTo>Appointment_Scheduling__c</referenceTo>
    <relationshipLabel>Appointment Attendees</relationshipLabel>
    <relationshipName>Appointment_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>